# DoublyLinkedList

./: CMakeLists.txt  main.c
include/: header.h  main.h
src/: deleteByLastName.c  deleteByPowertrain.c  insertSortedByLastName.c  main.c  printAscending.c  printDescending.c  readFromFile.c  searchByCO.c  searchByModel.c  utilities.c  writeToFile.c
src/functions/: deleteByLastName.c  deleteByPowertrain.c  insertSortedByLastName.c  printAscending.c  printDescending.c  readFromFile.c  searchByCO.c  searchByModel.c  writeToFile.c
src/utilities/: file-service.c  functions.c  utilities.c
